src/style.css
:root {
    --slides-visible: 3;
    
    --preto-hsl: 0, 0%, 0%;
    --branco-hsl: 0, 0%, 100%;
    --texto-hsl: 211.2, 12.56%, 100%;
    --cinza-100-hsl: 0, 0%, 10%;
    --cinza-200-hsl: 0, 0%, 20%;
    --cinza-300-hsl: 0, 0%, 35%;
    --cinza-400-hsl: 0, 0%, 50%;
    --cinza-500-hsl: 0, 0%, 70%;

    --bg-color-hsl: var(--preto-hsl);
    --text-color-hsl: var(--branco-hsl);
    --filter: invert();

    --filter-thumb: saturate(0) invert(100%) opacity(1);
    --filter-thumb-hover: saturate(1) invert(100%) opacity(1);

    --icon-color-black: 0, 0%, 0%;

    --fill-color: transparent;

    --about-color: -webkit-linear-gradient(97deg, #29e0a9 -12.7%, #5f75f2 32.64%, #9956f6 78.49%, #e254ff 109.78%);
    --about-bg-color: -webkit-linear-gradient(97deg, #29e0a9 -12.7%, #5f75f2 32.64%, #9956f6 78.49%, #e254ff 109.78%);

    --skills-color: -webkit-linear-gradient(37deg, #00a3d1 0%, #00ff2e 100%);
    --skills-bg-color: -webkit-linear-gradient(45deg, #00a3d1 0%, #00ff2e 100%);

    --projects-color: -webkit-linear-gradient(206deg, #ff00b3 0%, #ffe700 75% 75%, #ff00aa 100%);
    --projects-bg-color: -webkit-linear-gradient(206deg, #ff00b3 0%, #ffe700 75% 75%, #ff00aa 100%);

    --contato-color: -webkit-linear-gradient(45deg, #0026ff 0%, #00ffcc 100%);
    --contato-bg-color: -webkit-linear-gradient(45deg, #0026ff 0%, #00ffcc 100%);

    --extras-color: -webkit-linear-gradient(37deg, #9800ff 0%, #feff00 100%);
    --extras-bg-color: linear-gradient(90deg, #9800ff 0%, #feff00 100%);
}

.light-theme {
    --preto-hsl: 0, 0%, 0%;
    --branco-hsl: 0, 0%, 100%;
    --texto-hsl: 211.2, 12.56%, 100%;
    --cinza-100-hsl: 0, 0%, 95%;
    --cinza-200-hsl: 0, 0%, 85%;
    --cinza-300-hsl: 0, 0%, 70%;
    --cinza-400-hsl: 0, 0%, 50%;
    --cinza-500-hsl: 0, 0%, 30%;

    --bg-color-hsl: var(--branco-hsl);
    --text-color-hsl: var(--preto-hsl);
    --filter: none;

    --filter-thumb: saturate(0) invert(0) opacity(1);
    --filter-thumb-hover: saturate(1) invert(0) opacity(1);

    --icon-color-black: 0, 0%, 100%;

    --about-color: #5f75f2;
    --about-bg-color: none;

    --skills-color: #00e388;
    --skills-bg-color: none;

    --projects-color: #ff0099;
    --projects-bg-color: none;

    --contato-color: #00ebdf;
    --contato-bg-color: none;

    --extras-color: #f68eff;
    --extras-bg-color: none;
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    font-family: Poppins, Quicksand, Roboto, 'Segoe UI', sans-serif;
    background-color: hsl(var(--bg-color-hsl));
    color: hsl(var(--text-color-hsl));
    transition: background-color 0.4s ease, color 0.4s ease;
    /* background-color: #e4e1ea; */
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120px' height='120px' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23aeaeae' fill-opacity='0.1'%3E%3Cpath opacity='0.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
}

#topbar {
    height: 80px;
    width: 100%;
    display: flex;
    overflow: hidden;
    border-bottom: 1px solid hsla(var(--text-color-hsl), 0.2);
    background-color: hsl(var(--bg-color-hsl), 0.6);
    transition: background-color 0.4s ease, color 0.4s ease;

    text-align: center;
    /*horizontal*/

    align-content: center;
    /*vertical*/

    align-items: center;
    /*vertical*/
}

.logotipotopbar {
    height: 22px;
    width: auto;
    margin: 0 10px 0 20px;
    transition: ease 0.5s;
    filter: var(--filter);
}

#titulonav {
    font-family: 'Poppins';
    letter-spacing: 0.04rem;
    min-width: 90px;
    transform: scaleY(1.2);
    text-align: left;
    cursor: context-menu;
    user-select: none;
}

#titulonav #nome {
    font-weight: 700;
    font-size: 0.8rem;
}

#titulonav #info {
    font-weight: 300;
    font-size: 0.5rem;
}

.menu {
    display: block;
    font-family: 'Poppins';
    font-weight: 300;
    letter-spacing: 0.05rem;
    padding: 0 10px;
    margin: 0 0 0 10px;
    flex: 1 1 100%;
    text-transform: uppercase;
    font-size: 12px;
    user-select: none;
}

.menu ul {
    margin: 0px;
    display: inline-flex;
}

.menu ul li {
    margin: 0 2px;
}

.menu ul li a {
    color: hsla(var(--text-color-hsl), 1);
    text-shadow: 0.5px 0.5px hsla(var(--text-color-hsl), 0.2);
    transition: ease 0.5s;
    white-space: nowrap;
    padding: 10px 20px;
    border-radius: 10px;
}
/* ... */

